# sports-trivia

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  fly.toml
.github/workflows/: ci.yml
backend/: .dockerignore  pyproject.toml
backend/scripts/: download_soccer_data.py  generate_mock_nba_metadata.py  scrape_nba_data.py  scrape_nba_metadata.py  seed_database.py  transform_soccer_data.py
backend/src/sports_trivia/: __init__.py  config.py  main.py
backend/src/sports_trivia/data/: nba_players.json
backend/src/sports_trivia/db/: __init__.py  models.py  repository.py
backend/src/sports_trivia/db/seeders/: __init__.py  base.py  metadata_seeder.py  nba_seeder.py  soccer_seeder.py
backend/src/sports_trivia/models/: __init__.py  game.py  room.py
backend/src/sports_trivia/services/: __init__.py  base.py  db_data.py  game_manager.py  grid_categories.py  grid_generator.py  nba_data.py  room_manager.py  soccer_data.py
backend/src/sports_trivia/utils/: __init__.py  images.py
backend/src/sports_trivia/websocket/: __init__.py  events.py  handlers.py
backend/tests/: __init__.py  conftest.py  test_concurrency.py  test_db_data.py  test_game_manager.py  test_grid_game_manager.py  test_grid_generator.py  test_grid_integration.py  test_multiplayer.py  test_nba_data.py  test_room_cleanup.py  test_room_manager.py  test_state_sync.py  test_state_versioning.py  test_websocket.py
docs/: api.md  architecture.md  development.md  visual-identity.md
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
(+37 files in other folders)
